Add docstring handling

--- a/lib/bindings/Cargo.toml
+++ b/lib/bindings/Cargo.toml
@@ -20,7 +20,8 @@ breez-sdk-liquid = { path = "../core" }
 log = { workspace = true }
 uniffi = { workspace = true, features = [ "bindgen-tests", "cli" ] }
 # Bindgen used by KMP, version has to match the one supported by KMP
-uniffi_bindgen = "0.25.2"
+uniffi_bindgen = { workspace = true }
+uniffi_bindgen_kmp = { version = "0.25.2", package = "uniffi_bindgen" }
 uniffi_bindgen_kotlin_multiplatform = { git = "https://gitlab.com/trixnity/uniffi-kotlin-multiplatform-bindings", rev = "e8e3a88df5b657787c1198425c16008232b26548" }
 camino = "1.1.1"
 thiserror = { workspace = true }
