--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -42,7 +42,10 @@ log = "0.4.20"
 once_cell = "1.19"
 thiserror = "1.0"
 # Version must match that used by uniffi-bindgen-go
-uniffi = "0.25.0"
+uniffi = { git = "https://github.com/NordSecurity/uniffi-rs.git", tag = "v0.3.1+v0.25.0" }
+uniffi_bindgen = { git = "https://github.com/NordSecurity/uniffi-rs.git", tag = "v0.3.1+v0.25.0" }
+uniffi_build = { git = "https://github.com/NordSecurity/uniffi-rs.git", tag = "v0.3.1+v0.25.0" }
+uniffi_macros = { git = "https://github.com/NordSecurity/uniffi-rs.git", tag = "v0.3.1+v0.25.0" }
 
 [patch.crates-io]
 # https://github.com/BlockstreamResearch/rust-secp256k1-zkp/pull/48/commits and rebased on secp256k1-zkp 0.11.0
