--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -25,13 +25,13 @@ flutter_rust_bridge = { version = "=2.7.0", features = [
     "chrono",
 ], optional = true }
 log = { workspace = true }
-lwk_common = "0.7.0"
-lwk_signer = "0.7.0"
-lwk_wollet = { git = "https://github.com/dangeross/lwk", branch = "savage-full-scan-to-index" }
-#lwk_wollet = "0.7.0"
+lwk_common = "0.8.0"
+lwk_signer = "0.8.0"
+lwk_wollet = { git = "https://github.com/breez/lwk", branch = "breez-sdk-liquid-0.6.3" }
+#lwk_wollet = "0.8.0"
 rusqlite = { version = "0.31", features = ["backup", "bundled"] }
 rusqlite_migration = "1.0"
-sdk-common = { git = "https://github.com/breez/breez-sdk", rev = "e0f2548b4ba917e69c532eb9ff900b64ed9a3da3", features = [
+sdk-common = { git = "https://github.com/breez/breez-sdk", branch = "breez-sdk-liquid-0.6.3", features = [
     "liquid",
 ] }
 serde = { version = "1.0.197", features = ["derive"] }
@@ -51,6 +51,7 @@ futures-util = { version = "0.3.28", default-features = false, features = [
 async-trait = "0.1.80"
 hex = "0.4"
 reqwest = { version = "=0.11.20", features = ["json"] }
+elements = { version = "0.25.1" }
 electrum-client = { version = "0.19.0" }
 zbase32 = "0.1.2"
 x509-parser = { version = "0.16.0" }
