feat: add rt-sync to regtest setup

--- a/regtest/.env
+++ b/regtest/.env
@@ -17,3 +17,4 @@ NBXPLORER_IMAGE=nicolasdorier/nbxplorer:2.5.4
 MEMPOOL_WEB_IMAGE=mempool/frontend:latest
 MEMPOOL_API_IMAGE=mempool/backend:latest
 MEMPOOL_DB_IMAGE=mariadb:10.5.21
+RT_SYNC_IMAGE=hydrayse/data-sync:latest
