--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -16,7 +16,7 @@ workspace = true
 
 [dependencies]
 anyhow = { workspace = true }
-bip39 = "2.1.0"
+bip39 = "2.0.0"
 boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust", rev = "1989f43a9bfbf9875798a2a99afa300aeea9ec7e" }
 chrono = "0.4"
 derivative = "2.2.0"
@@ -28,13 +28,14 @@ log = { workspace = true }
 lwk_common = "0.8.0"
 lwk_signer = "0.8.0"
 lwk_wollet = { git = "https://github.com/breez/lwk", branch = "breez-sdk-liquid-0.6.3" }
-rusqlite = { version = "0.32.1", features = ["backup", "bundled"] }
-rusqlite_migration = "1.3"
+#lwk_wollet = "0.8.0"
+rusqlite = { version = "0.31", features = ["backup", "bundled"] }
+rusqlite_migration = "1.0"
 sdk-common = { git = "https://github.com/breez/breez-sdk", rev = "7a96ce7e5c12d837948e1e37687a1bd0cd0f884c", features = ["liquid"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.116"
-strum = "0.26.3"
-strum_macros = "0.26.4"
+strum = "0.25"
+strum_macros = "0.25"
 thiserror = { workspace = true }
 tokio-tungstenite = { version = "0.21.0", features = ["native-tls-vendored"] }
 openssl = { version = "0.10", features = ["vendored"] }
@@ -47,12 +48,14 @@ futures-util = { version = "0.3.28", default-features = false, features = [
 ] }
 async-trait = "0.1.80"
 hex = "0.4"
+reqwest = { version = "=0.11.20", features = ["json"] }
 electrum-client = { version = "0.21.0", default-features = false, features = [
     "use-rustls-ring",
     "proxy",
 ] }
 zbase32 = "0.1.2"
-x509-parser = { version = "0.17.0" }
+x509-parser = { version = "0.16.0" }
+tempfile = "3"
 prost = "0.13.3"
 ecies = { version = "0.2.7", default-features = false, features = ["pure"] }
 semver = "1.0.23"
@@ -62,6 +65,7 @@ tonic = { version = "0.12.3", features = ["tls", "tls-webpki-roots"] }
 [dev-dependencies]
 paste = "1.0.15"
 tempdir = "0.3.7"
+uuid = { version = "1.8.0", features = ["v4"] }
 
 [build-dependencies]
 anyhow = { version = "1.0.79", features = ["backtrace"] }
