--- a/packages/react-native/example-expo/package.json
+++ b/packages/react-native/example-expo/package.json
@@ -6,13 +6,15 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "prebuild:ios": "expo prebuild --no-install --platform ios"
+    "prebuild:ios": "expo prebuild --no-install --platform ios",
+    "prebuild:android": "expo prebuild --no-install --platform android"
   },
   "dependencies": {
     "@breeztech/react-native-breez-sdk-liquid": "file:../",
-    "expo": "~52.0.4",
-    "expo-crypto": "^14.0.1",
-    "expo-secure-store": "^14.0.0",
+    "expo": "~52.0.35",
+    "expo-crypto": "~14.0.2",
+    "expo-notifications": "~0.29.13",
+    "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.1"
