--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -51,7 +51,20 @@
   "peerDependencies": {
     "react": "*",
     "react-native": "*",
-    "expo": ">=49.0.0"
+    "expo": ">=49.0.0",
+    "expo-notifications": ">=0.29.0",
+    "expo-secure-store": ">=14.0.01"
+  },
+  "peerDependenciesMeta": {
+     "expo": {
+	"otpional": true
+     },
+     "expo-notifications": {
+	"otpional": true
+     },
+     "expo-secure-store": {
+	"otpional": true
+     }
   },
   "devDependencies": {
     "@expo/config": "^10.0.5",
@@ -65,7 +78,7 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-prettier": "^3.1.3",
-    "expo-module-scripts": "^4.0.2",
+    "expo-module-scripts": "^4.0.4",
     "jest": "^26.6.3",
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
