--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -36,6 +36,9 @@ unexpected_cfgs = { level = "allow", check-cfg = ['cfg(frb_expand)'] }
 anyhow = "1.0"
 log = "0.4.20"
 once_cell = "1.19"
+serde = { version = "1.0", features = ["derive"] }
+sdk-common = { git = "https://github.com/breez/breez-sdk", rev = "cd5f2a0095643dd7e0c9f696375ced9525e3b254", features = ["liquid"] }
+sdk-macros = { git = "https://github.com/breez/breez-sdk", rev = "cd5f2a0095643dd7e0c9f696375ced9525e3b254" }
 thiserror = "1.0"
 # Version must match that used by uniffi-bindgen-go
 uniffi = "0.25.0"
