--- a/lib/wasm/Cargo.toml
+++ b/lib/wasm/Cargo.toml
@@ -11,6 +11,10 @@ crate-type = ["cdylib"]
 workspace = true
 
 [dependencies]
+anyhow = { workspace = true }
 breez-sdk-liquid = { path = "../core" }
+sdk-macros = { workspace = true }
+serde = { workspace = true }
+tsify-next = "0.5.5"
 wasm-bindgen = "0.2.100"
 wasm-bindgen-futures = "0.4.50"
