--- a/packages/dart/pubspec.yaml
+++ b/packages/dart/pubspec.yaml
@@ -11,19 +11,19 @@ platforms:
   macos:
 
 environment:
-  sdk: '>=3.7.0 <4.0.0'
+  sdk: '>=3.7.0 <4.0.0' # ffi: 2.1.4 requires Dart 3.7.0 or greater 
 
 dev_dependencies:
-  build_runner: ^2.4.14
-  ffigen: ">=8.0.0 <=17.0.0"
-  freezed: ^2.5.8
-  lints: ">=2.0.0 <=5.1.1"
+  build_runner: ^2.4.15
+  ffigen: ^18.0.0
+  freezed: ^3.0.4
+  lints: ^5.1.1
   path: ^1.9.1
   test: ^1.25.15
 
 dependencies:
   ffi: ^2.1.4
-  flutter_rust_bridge: ">=2.4.0 <=2.8.0"
-  freezed_annotation: ^2.4.4
+  flutter_rust_bridge: ">=2.4.0 <=2.9.0"
+  freezed_annotation: ^3.0.0
   logging: ^1.3.0
-  meta: ^1.12.0 # meta is pinned to version 1.12.0 by integration_test from the flutter SDK.
+  meta: ^1.16.0
