Downgrade android release to Uniffi 0.25 (#786)
* fix: revert minSdkVersion across all uniffi packages

This PR fixes a regression introduced in https://github.com/breez/breez-sdk-liquid/pull/766 due to a confusion between minSdkVersion requirement & minimum compileSdkVersion requirement.

* Bump package requirements on flutter_breez_liquid README

* Bump JNA used on bindings tests to 5.14.0

* Downgrade android release to Uniffi 0.25

---------

Co-authored-by: Ross Savage <hello@satimoto.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -217,8 +217,8 @@ jobs:
 
       - name: Run bindings tests
         run: |
-          curl -o jna-5.12.1.jar https://repo1.maven.org/maven2/net/java/dev/jna/jna/5.12.1/jna-5.12.1.jar
-          export CLASSPATH=$(pwd)/jna-5.12.1.jar;
+          curl -o jna-5.14.0.jar https://repo1.maven.org/maven2/net/java/dev/jna/jna/5.14.0/jna-5.14.0.jar
+          export CLASSPATH=$(pwd)/jna-5.14.0.jar;
           cd lib/bindings
           cargo test
 
@@ -335,7 +335,7 @@ jobs:
       - name: Build Android bindings
         working-directory: lib/bindings       
         run: |
-          cargo run --bin uniffi-bindgen generate src/breez_sdk_liquid.udl --no-format --language kotlin -o langs/android/lib/src/main/kotlin
+          cargo run --no-default-features --features=uniffi-25 --bin uniffi-bindgen generate src/breez_sdk_liquid.udl --no-format --language kotlin -o langs/android/lib/src/main/kotlin
 
       - name: Run Android build
         working-directory: lib/bindings/langs/android  
