--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -85,6 +85,9 @@ uuid = { version = "1.8.0", features = ["v4", "js"] }
 [dev-dependencies]
 sdk-common = { workspace = true, features = ["test-utils"] }
 paste = "1.0.15"
+
+# Non-WASM dev dependencies
+[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dev-dependencies]
 tempdir = "0.3.7"
 
 # WASM dev dependencies
