--- a/packages/flutter/pubspec.yaml
+++ b/packages/flutter/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   breez_liquid:
     git:
       url: https://github.com/breez/breez-sdk-liquid-dart
+      ref: 0.7.2-dev1
   ffigen: ^18.0.0
 
 dev_dependencies:
