--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -49,6 +49,7 @@ futures-util = { version = "0.3.28", default-features = false, features = [
     "sink",
     "std",
 ] }
+web-time = "1.1.0"
 async-trait = "0.1.86"
 hex = "0.4"
 reqwest = { version = "0.12", features = ["json"] }
