--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -93,6 +93,8 @@ tempdir = "0.3.7"
 # WASM dev dependencies
 [target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dev-dependencies]
 wasm-bindgen-test = "0.3.33"
+rand = "0.8"
+getrandom = { version = "0.2", features = ["js"] }
 
 [build-dependencies]
 anyhow = { version = "1.0.79", features = ["backtrace"] }
