--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,6 +79,9 @@ jobs:
           version: "27.2"
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Setup emsdk
+        uses: mymindstorm/setup-emsdk@v14
+
       - name: Clippy
         run: make wasm-clippy
 
@@ -142,6 +145,9 @@ jobs:
         with:
           version: "27.2"
           repo-token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Setup emsdk
+        uses: mymindstorm/setup-emsdk@v14
 
       - name: Cargo build
         working-directory: lib/wasm
@@ -294,6 +300,9 @@ jobs:
         with:
           version: "27.2"
           repo-token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Setup emsdk
+        uses: mymindstorm/setup-emsdk@v14
 
       - name: Test WASM
         run: make wasm-test
