Lock cargo-expand install

--- a/lib/bindings/langs/flutter/justfile
+++ b/lib/bindings/langs/flutter/justfile
@@ -21,7 +21,8 @@ clean:
 
 # Install flutter_rust_bridge_codegen dependencies
 frb:
-	cargo install cargo-expand
+	# This is locked plist PR https://github.com/ebarnard/rust-plist/pull/152 is merged/released
+	cargo install cargo-expand --locked
 	cargo install flutter_rust_bridge_codegen --version 2.9.0
 	dart pub global activate ffigen
 	dart pub global activate ffi
