--- a/lib/core/Cargo.toml
+++ b/lib/core/Cargo.toml
@@ -36,7 +36,7 @@ rusqlite = { git = "https://github.com/Spxg/rusqlite", rev = "e36644127f31fa6e7e
     "bundled",
 ] }
 tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
-tokio_with_wasm = { version = "0.8.2", features = ["rt", "macros"] }
+tokio_with_wasm = { version = "0.8.2", features = ["macros", "rt", "sync", "time"] }
 sdk-common = { workspace = true }
 sdk-macros = { workspace = true }
 rusqlite_migration = { git = "https://github.com/hydra-yse/rusqlite_migration", branch = "rusqlite-v0.33.0" }
@@ -57,7 +57,6 @@ reqwest = { version = "0.12", features = ["json"] }
 zbase32 = "0.1.2"
 x509-parser = { version = "0.16.0" }
 tempfile = "3"
-prost = "^0.11"
 ecies = { version = "0.2.7", default-features = false, features = ["pure"] }
 semver = "1.0.23"
 lazy_static = "1.5.0"
@@ -70,6 +69,7 @@ electrum-client = { version = "0.21.0", default-features = false, features = [
 ] }
 lwk_wollet = { version = "0.9.0" }
 maybe-sync = { version = "0.1.1", features = ["sync"] }
+prost = "^0.11"
 tokio-stream = { version = "0.1.14", features = ["sync"] }
 tonic = { version = "^0.8", features = ["tls", "tls-webpki-roots"] }
 uuid = { version = "1.8.0", features = ["v4"] }
@@ -81,6 +81,7 @@ lwk_wollet = { version = "0.9.0", default-features = false, features = [
     "esplora",
 ] }
 maybe-sync = "0.1.1"
+prost = "^0.13"
 uuid = { version = "1.8.0", features = ["v4", "js"] }
 tonic = { version = "0.12", default-features = false, features = [
     "codegen",
