Reintroduce 32bit builds

--- a/.github/workflows/build-bindings-windows.yml
+++ b/.github/workflows/build-bindings-windows.yml
@@ -51,6 +51,7 @@ jobs:
       matrix:
         uniffi: ${{ fromJson(needs.setup.outputs.uniffi-matrix) }}
         target: [
+          i686-pc-windows-msvc,
           x86_64-pc-windows-msvc,
         ]
     steps:
@@ -102,6 +103,7 @@ jobs:
       matrix:
         uniffi: ${{ fromJson(needs.setup.outputs.uniffi-matrix) }}
         target: [
+          i686-pc-windows-msvc,
           x86_64-pc-windows-msvc,
         ]
     steps:
