--- a/.github/workflows/build-bindings-android.yml
+++ b/.github/workflows/build-bindings-android.yml
@@ -52,6 +52,8 @@ jobs:
         uniffi: ${{ fromJson(needs.setup.outputs.uniffi-matrix) }}
         target: [
           aarch64-linux-android,
+          armv7-linux-androideabi,
+          i686-linux-android,
           x86_64-linux-android,
         ]
     steps:
@@ -95,6 +97,11 @@ jobs:
         cp lib/target/${{ matrix.target }}/release/libbreez_sdk_liquid_bindings.so dist
 
     - name: Copy libc++_shared
+      if: ${{ matrix.target == 'armv7-linux-androideabi'}}
+      run: cp $ANDROID_NDK_HOME/toolchains/llvm/prebuilt/linux-x86_64/sysroot/usr/lib/arm-linux-androideabi/libc++_shared.so dist
+
+    - name: Copy libc++_shared
+      if: ${{ matrix.target != 'armv7-linux-androideabi'}}
       run: cp $ANDROID_NDK_HOME/toolchains/llvm/prebuilt/linux-x86_64/sysroot/usr/lib/${{ matrix.target }}/libc++_shared.so dist
 
     - name: Archive release
@@ -120,6 +127,16 @@ jobs:
 
       - uses: actions/download-artifact@v4
         with:
+          name: bindings-armv7-linux-androideabi${{ matrix.uniffi }}
+          path: armeabi-v7a
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: bindings-i686-linux-android${{ matrix.uniffi }}
+          path: x86
+
+      - uses: actions/download-artifact@v4
+        with:
           name: bindings-x86_64-linux-android${{ matrix.uniffi }}
           path: x86_64
       
@@ -139,6 +156,8 @@ jobs:
         uniffi: ${{ fromJson(needs.setup.outputs.uniffi-matrix) }}
         target: [
           aarch64-linux-android,
+          armv7-linux-androideabi,
+          i686-linux-android,
           x86_64-linux-android,
         ]
     steps:
@@ -167,6 +186,16 @@ jobs:
         with:
           name: bindings-aarch64-linux-android${{ matrix.uniffi }}
           path: arm64-v8a
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: bindings-armv7-linux-androideabi${{ matrix.uniffi }}
+          path: armeabi-v7a
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: bindings-i686-linux-android${{ matrix.uniffi }}
+          path: x86
 
       - uses: actions/download-artifact@v4
         with:
