--- a/.github/workflows/publish-csharp.yml
+++ b/.github/workflows/publish-csharp.yml
@@ -66,6 +66,11 @@ jobs:
 
       - uses: actions/download-artifact@v4
         with:
+          name: bindings-i686-pc-windows-msvc-uniffi-25
+          path: lib/bindings/langs/csharp/src/runtimes/win-x86/native
+
+      - uses: actions/download-artifact@v4
+        with:
           name: bindings-x86_64-pc-windows-msvc-uniffi-25
           path: lib/bindings/langs/csharp/src/runtimes/win-x64/native
 
