Check that regtest environment is set up

--- a/lib/core/Makefile
+++ b/lib/core/Makefile
@@ -23,8 +23,20 @@ cargo-clippy:
 cargo-test:
 	cargo test
 
+check-regtest:
+	@if ! docker compose -f ../../regtest/docker-compose.yml ps | grep -q "Up"; then \
+		echo "Error: Regtest setup is not running. Please run 'make regtest-start' first."; \
+		exit 1; \
+	fi
+
+regtest-start:
+	cd ../../regtest && ./start.sh
+
+regtest-stop:
+	cd ../../regtest && ./stop.sh
+
 REGTEST_TESTS ?= regtest
-cargo-regtest-test:
+cargo-regtest-test: check-regtest
 	$(REGTEST_PREFIX) cargo test $(REGTEST_TESTS) --features "regtest"
 
 wasm-clippy:
@@ -41,7 +53,7 @@ test-chrome:
 test-safari:
 	BROWSER=safari $(MAKE) wasm-test
 
-wasm-regtest-test:
+wasm-regtest-test: check-regtest
 	$(CLANG_PREFIX) $(REGTEST_PREFIX) WASM_BINDGEN_TEST_TIMEOUT=500 wasm-pack test --headless --$(BROWSER) --features regtest -- $(REGTEST_TESTS)
 
 wasm-regtest-test-chrome:
