Add missing mkdir for deno

--- a/.github/workflows/build-bindings-wasm.yml
+++ b/.github/workflows/build-bindings-wasm.yml
@@ -74,7 +74,7 @@ jobs:
     steps:
     - name: Build dummy Wasm
       run: |
-        mkdir -p pkg/bundle pkg/node pkg/web
+        mkdir -p pkg/bundle pkg/deno pkg/node pkg/web
         touch pkg/bundle/breez_sdk_liquid_wasm.wasm
         touch pkg/deno/breez_sdk_liquid_wasm.wasm
         touch pkg/node/breez_sdk_liquid_wasm.wasm
