--- a/lib/wasm/Makefile
+++ b/lib/wasm/Makefile
@@ -22,7 +22,7 @@ clippy-node:
 build: build-bundle build-deno build-node build-web
 
 build-bundle:
-	$(CLANG_PREFIX) wasm-pack build --target bundler --release --out-dir pkg/bundle
+	$(CLANG_PREFIX) wasm-pack build --target bundler --release --out-dir pkg/bundle -- features browser
 
 build-deno:
 	$(CLANG_PREFIX) wasm-pack build --target deno --release --out-dir pkg/deno
